--- a/blinky/.settings/org.eclipse.core.resources.prefs
+++ b/blinky/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,18 @@
 eclipse.preferences.version=1
+encoding//Debug/build/test/cache/subdir_rules.mk=UTF-8
+encoding//Debug/build/test/cache/subdir_vars.mk=UTF-8
+encoding//Debug/build/test/mocks/subdir_rules.mk=UTF-8
+encoding//Debug/build/test/mocks/subdir_vars.mk=UTF-8
+encoding//Debug/build/test/out/c/subdir_rules.mk=UTF-8
+encoding//Debug/build/test/out/c/subdir_vars.mk=UTF-8
+encoding//Debug/build/test/out/subdir_rules.mk=UTF-8
+encoding//Debug/build/test/out/subdir_vars.mk=UTF-8
+encoding//Debug/build/test/preprocess/files/subdir_rules.mk=UTF-8
+encoding//Debug/build/test/preprocess/files/subdir_vars.mk=UTF-8
+encoding//Debug/build/test/preprocess/includes/subdir_rules.mk=UTF-8
+encoding//Debug/build/test/preprocess/includes/subdir_vars.mk=UTF-8
+encoding//Debug/build/test/runners/subdir_rules.mk=UTF-8
+encoding//Debug/build/test/runners/subdir_vars.mk=UTF-8
 encoding//Debug/makefile=UTF-8
 encoding//Debug/objects.mk=UTF-8
 encoding//Debug/sources.mk=UTF-8
@@ -6,3 +20,5 @@ encoding//Debug/src/subdir_rules.mk=UTF-8
 encoding//Debug/src/subdir_vars.mk=UTF-8
 encoding//Debug/subdir_rules.mk=UTF-8
 encoding//Debug/subdir_vars.mk=UTF-8
+encoding//Debug/test/subdir_rules.mk=UTF-8
+encoding//Debug/test/subdir_vars.mk=UTF-8
