--- a/blinky/project.yml
+++ b/blinky/project.yml
@@ -34,6 +34,8 @@
     - -:test/support
   :source:
     - src/**
+    - C:\ti\tivaware_c_series_2_1_4_178
+    - C:\ti\tivaware_c_series_2_1_4_178\driverlib
   :support:
     - test/support
 
@@ -62,6 +64,10 @@
     uint32:   UINT32
     int8:     INT8
     bool:     UINT8
+  :includes: # This will add these includes to each mock.
+    - <stdbool.h>
+    - <stdint.h>
+  :treat_externs: :include # Now extern-ed functions will be mocked.
 
 # Add -gcov to the plugins list to make sure of the gcov plugin
 # You will need to have gcov and gcovr both installed to make it work.
