Add notes on windows installation.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
         "Ceedling",
-        "Chernosky"
+        "Chernosky",
+        "MSYS",
+        "ridk",
+        "rubyinstaller"
     ]
 }
